--- a/src/nix_python/templates/index.html
+++ b/src/nix_python/templates/index.html
@@ -23,6 +23,63 @@
       });
     }
   </script>
+
+  <style>
+
+
+body {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+  background-color: #f2f2f2;
+  margin: 0;
+  padding: 0;
+}
+
+h1 {
+  text-align: center;
+  margin-top: 50px;
+}
+
+table {
+  margin: 0 auto;
+  margin-top: 50px;
+}
+
+td {
+  padding: 10px;
+}
+
+input[type="text"] {
+  padding: 10px;
+  font-size: 16px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  width: 200px;
+}
+
+button {
+  display: block;
+  margin: 0 auto;
+  margin-top: 50px;
+  padding: 10px 20px;
+  background-color: #007aff;
+  color: #fff;
+  border-radius: 5px;
+  border: 0;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+#result {
+  margin-top: 50px;
+  font-size: 20px;
+  text-align: center;
+}
+
+p {
+  text-align: center;
+}
+
+  </style>
 </head>
 <body>
   <h1>Iris Binary Classifier</h1>
